# docs/swagger.yaml
@@ -183,8 +183,8 @@ paths:
       produces:
       - application/json
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/models.User'
         "400":
